--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,8 +1,9 @@
-/*
-Tailwind CSS v3.4.1
-https://tailwindcss.com
-*/
+/*!
+ * Tailwind CSS v3.4.1
+ * https://tailwindcss.com
+ */
 
+/* Base styles */
 *, ::before, ::after {
   box-sizing: border-box;
   border-width: 0;
@@ -19,8 +20,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -moz-tab-size: 4;
   tab-size: 4;
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-feature-settings: normal;
+  font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
 }
 
 body {
@@ -34,7 +34,7 @@ hr {
   border-top-width: 1px;
 }
 
-abbr:where([title]) {
+abbr[title] {
   text-decoration: underline dotted;
 }
 
@@ -70,6 +70,7 @@ table {
 
 ol, ul {
   list-style-type: none;
+  padding-left: 0;
 }
 
 textarea {
@@ -342,6 +343,10 @@ button, [role="button"] {
   border-bottom-right-radius: 0.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -399,11 +404,6 @@ button, [role="button"] {
 .border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.border-green-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -679,8 +679,12 @@ button, [role="button"] {
   text-decoration-line: underline;
 }
 
-.opacity-75 {
-  opacity: 0.75;
+.opacity-60 {
+  opacity: 0.6;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow-sm {
